WIP version of recommendation API.

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
             "email": "matej.kloska@alvolia.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "Alvolia\\API\\": "src/"
+        }
+    }
 }
