--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Official API for Alvolia platform",
     "type": "library",
     "require": {
-        "ext-curl": "^0.0.0"
+        "ext-curl": "*"
     },
     "license": "MIT",
     "authors": [
